--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         "psr-4": {
             "App\\": "app/"
         }
+        , "files": [
+            "app/Utils.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
