--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.0"
+        "phpunit/phpunit": "~5.0",
+        "php-console/php-console": "^3.1", 
+        "php-console/laravel-service-provider": "~5.0"
     },
     "autoload": {
         "classmap": [
