--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "devDependencies": {
     "axios": "^0.15.2",
     "bootstrap-sass": "^3.3.7",
+    "eslint": "^3.17.0",
+    "eslint-config-google": "^0.7.1",
     "jquery": "^3.1.0",
     "laravel-mix": "^0.5.0",
     "lodash": "^4.16.2",
